--- a/content/kactl.tex
+++ b/content/kactl.tex
@@ -2,11 +2,11 @@
 \usepackage{kactlpkg}
 \kactlcontentdir{content}
 
-\university{KTH}{KTH Royal Institute of Technology}{kth}
-\team{Omogen Heap}{Simon Lindholm, Johan Sannemo, Mårten Wiman}
+\university{Chula}{Chulalongkorn University}{chula}
+\team{Vaporized}{Teetat T., Borworntat D., Pakapim E.}
 % \contest{ACM-ICPC World Finals 2017}{May 24, 2017}
 \contest{\ }{\today}
-% \enablecolors
+\enablecolors
 
 \begin{document}
 	\maketeampage
