fix: team name :clown:

--- a/content/kactl.tex
+++ b/content/kactl.tex
@@ -3,9 +3,9 @@
 \kactlcontentdir{content}
 
 \university{Chula}{Chulalongkorn University}{chula}
-\team{Vaporized}{Teetat T., Borworntat D., Pakapim E.}
+\team{Vaporised}{Teetat T., Borworntat D., Pakapim E.}
 % \contest{ACM-ICPC World Finals 2017}{May 24, 2017}
-\contest{\ }{\today}
+\contest{adapted from KACTL}{\today}
 \enablecolors
 
 \begin{document}
