--- a/content/data-structures/chapter.tex
+++ b/content/data-structures/chapter.tex
@@ -2,15 +2,15 @@
 
 \kactlimport{OrderStatisticTree.h}
 \kactlimport{HashMap.h}
-\kactlimport{SegmentTree.h}
-\kactlimport{LazySegmentTree.h}
+% \kactlimport{SegmentTree.h}
+% \kactlimport{LazySegmentTree.h}
 % \kactlimport{UnionFind.h}
 \kactlimport{UnionFindRollback.h}
 \kactlimport{SubMatrix.h}
 \kactlimport{Matrix.h}
 \kactlimport{LineContainer.h}
 \kactlimport{Treap.h}
-\kactlimport{FenwickTree.h}
-\kactlimport{FenwickTree2d.h}
+% \kactlimport{FenwickTree.h}
+% \kactlimport{FenwickTree2d.h}
 \kactlimport{RMQ.h}
 \kactlimport{MoQueries.h}
