--- a/content/number-theory/chapter.tex
+++ b/content/number-theory/chapter.tex
@@ -13,6 +13,7 @@
 	\kactlimport{FastEratosthenes.h}
 	\kactlimport{MillerRabin.h}
 	\kactlimport{Factor.h}
+	\kactlimport{GoldbatchConjecture.h}
 
 \section{Divisibility}
 	\kactlimport{euclid.h}
