feat: gaussian elimination

--- a/content/kactl.tex
+++ b/content/kactl.tex
@@ -6,7 +6,7 @@
 \team{Vaporised}{Teetat T., Borworntat D., Pakapim E.}
 % \contest{ACM-ICPC World Finals 2017}{May 24, 2017}
 \contest{adapted from KACTL}{\today}
-% \enablecolors
+\enablecolors
 
 \begin{document}
 	\maketeampage
