--- a/content/number-theory/chapter.tex
+++ b/content/number-theory/chapter.tex
@@ -11,12 +11,14 @@
 
 \section{Primality}
 	\kactlimport{FastEratosthenes.h}
+	\kactlimport{LinearSieve.h}
 	\kactlimport{MillerRabin.h}
 	\kactlimport{Factor.h}
 	\kactlimport{GoldbatchConjecture.h}
 
 \section{Divisibility}
-	\kactlimport{euclid.h}
+	% \kactlimport{euclid.h}
+	\kactlimport{ExtendedEuclid.h}
 	% \kactlimport{Euclid.java}
 	\kactlimport{CRT.h}
 
