--- a/content/numerical/chapter.tex
+++ b/content/numerical/chapter.tex
@@ -33,6 +33,6 @@ if $F(Q) = 0$, then $Q_{2n} \equiv Q_{n} - \frac{F(Q_{n})}{F'(Q_{n})}\;(\mathrm{
 
 \section{Fourier transforms}
 	\kactlimport{FastFourierTransform.h}
-	\kactlimport{FastFourierTransformMod.h}
+	% \kactlimport{FastFourierTransformMod.h}
 	\kactlimport{NumberTheoreticTransform.h}
 	\kactlimport{FastSubsetTransform.h}
