--- a/content/graph/chapter.tex
+++ b/content/graph/chapter.tex
@@ -9,13 +9,14 @@
 	\kactlimport{PushRelabel.h}
 	\kactlimport{MinCostMaxFlow.h}
 	\kactlimport{EdmondsKarp.h}
-	% \kactlimport{Dinic.h}
+	\kactlimport{Dinic.h}
 	\kactlimport{MinCut.h}
 	\kactlimport{GlobalMinCut.h}
 	\kactlimport{GomoryHu.h}
 
 \section{Matching}
 	\kactlimport{hopcroftKarp.h}
+	\kactlimport{Kuhn.h}
 	\kactlimport{DFSMatching.h}
 	\kactlimport{MinimumVertexCover.h}
 	\kactlimport{WeightedMatching.h}
