--- a/content/numerical/chapter.tex
+++ b/content/numerical/chapter.tex
@@ -35,4 +35,5 @@ if $F(Q) = 0$, then $Q_{2n} \equiv Q_{n} - \frac{F(Q_{n})}{F'(Q_{n})}\;(\mathrm{
 	\kactlimport{FastFourierTransform.h}
 	% \kactlimport{FastFourierTransformMod.h}
 	\kactlimport{NumberTheoreticTransform.h}
+	\kactlimport{FormalPowerSeries.h}
 	\kactlimport{FastSubsetTransform.h}
