--- a/content/graph/chapter.tex
+++ b/content/graph/chapter.tex
@@ -2,8 +2,8 @@
 
 \section{Fundamentals}
 	\kactlimport{BellmanFord.h}
-	\kactlimport{FloydWarshall.h}
-	\kactlimport{TopoSort.h}
+	% \kactlimport{FloydWarshall.h}
+	% \kactlimport{TopoSort.h}
 
 \section{Network flow}
 	\kactlimport{PushRelabel.h}
@@ -17,7 +17,7 @@
 \section{Matching}
 	\kactlimport{hopcroftKarp.h}
 	\kactlimport{Kuhn.h}
-	\kactlimport{DFSMatching.h}
+	% \kactlimport{DFSMatching.h}
 	\kactlimport{MinimumVertexCover.h}
 	\kactlimport{WeightedMatching.h}
 	\kactlimport{GeneralMatching.h}
@@ -37,7 +37,7 @@
 	\kactlimport{MaximumIndependentSet.h}
 
 \section{Trees}
-	\kactlimport{BinaryLifting.h}
+	% \kactlimport{BinaryLifting.h}
 	\kactlimport{LCA.h}
 	\kactlimport{CompressTree.h}
 	\kactlimport{HLD.h}
